objects/pse__Revenue_Forecast_Version_Detail__c.object
<CustomObject>
    <customHelpPage>pse__RevenueForecastVersionDetailHelp</customHelpPage>
    <description>Stores the detail records used by different versions of a revenue forecast.</description>
    <fields>
        <fullName>pse__Corp_Currency__c</fullName>
        <description>The corporate currency of the org at the time the revenue forecast was run.</description>
        <inlineHelpText>The corporate currency of the org at the time the revenue forecast was run.</inlineHelpText>
        <label>Corp: Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Equal_Split_Milestone_P__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that is ready for recognition within the relevant time period for the Milestone revenue source, when using the Equal Split recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that is ready for recognition within the relevant time period for the Milestone revenue source, when using the Equal Split recognition method.</inlineHelpText>
        <label>Corp: Equal Split: Milestone: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Equal_Split_Milestone_R__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Milestone revenue source, when using the Equal Split recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Milestone revenue source, when using the Equal Split recognition method.</inlineHelpText>
        <label>Corp: Equal Split: Milestone: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Equal_Split_Milestone_S__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that is scheduled for recognition within the relevant time period for the Milestone revenue source, when using the Equal Split recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that is scheduled for recognition within the relevant time period for the Milestone revenue source, when using the Equal Split recognition method.</inlineHelpText>
        <label>Corp: Equal Split: Milestone: Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Equal_Split_Project_P__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that is ready for recognition within the relevant time period for the Project revenue source, when using the Equal Split recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that is ready for recognition within the relevant time period for the Project revenue source, when using the Equal Split recognition method.</inlineHelpText>
        <label>Corp: Equal Split: Project: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Equal_Split_Project_R__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Project revenue source, when using the Equal Split recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Project revenue source, when using the Equal Split recognition method.</inlineHelpText>
        <label>Corp: Equal Split: Project: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Equal_Split_Project_S__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that is scheduled for recognition within the relevant time period for the Project revenue source, when using the Equal Split recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that is scheduled for recognition within the relevant time period for the Project revenue source, when using the Equal Split recognition method.</inlineHelpText>
        <label>Corp: Equal Split: Project: Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Eva_S__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that is scheduled for recognition within the relevant time period for the EVA revenue source, when using the Deliverable recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that is scheduled for recognition within the relevant time period for the EVA revenue source, when using the Deliverable recognition method.</inlineHelpText>
        <label>Corp: Deliverable: EVA: Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Expense_P__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that is ready for recognition within the relevant time period for the Expense revenue source, when using the Deliverable recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that is ready for recognition within the relevant time period for the Expense revenue source, when using the Deliverable recognition method.</inlineHelpText>
        <label>Corp: Deliverable: Expense: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Expense_R__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Expense revenue source, when using the Deliverable recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Expense revenue source, when using the Deliverable recognition method.</inlineHelpText>
        <label>Corp: Deliverable: Expense: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Milestone_P__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that is ready for recognition for the Milestone revenue source, when using the Deliverable recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that is ready for recognition for the Milestone revenue source, when using the Deliverable recognition method.</inlineHelpText>
        <label>Corp: Deliverable: Milestone: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Milestone_R__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Milestone revenue source, when using the Deliverable recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Milestone revenue source, when using the Deliverable recognition method.</inlineHelpText>
        <label>Corp: Deliverable: Milestone: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Milestone_S__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that is scheduled for recognition within the relevant time period for the Milestone revenue source, when using the Deliverable recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that is scheduled for recognition within the relevant time period for the Milestone revenue source, when using the Deliverable recognition method.</inlineHelpText>
        <label>Corp: Deliverable: Milestone: Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Misc_Adjustment_P__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that is ready for recognition for the Miscellaneous Adjustment revenue source, when using the Deliverable recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that is ready for recognition for the Miscellaneous Adjustment revenue source, when using the Deliverable recognition method.</inlineHelpText>
        <label>Corp: Deliverable: MA: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Misc_Adjustment_R__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Miscellaneous Adjustment revenue source, when using the Deliverable recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Miscellaneous Adjustment revenue source, when using the Deliverable recognition method.</inlineHelpText>
        <label>Corp: Deliverable: MA: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Opportunity_U_Best__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of unscheduled revenue within the relevant time period for the Opportunity revenue source, using the best case scenario.</description>
        <inlineHelpText>In the corporate currency, the amount of unscheduled revenue within the relevant time period for the Opportunity revenue source, using the best case scenario.</inlineHelpText>
        <label>Corp: Opportunity: Unscheduled Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Opportunity_U_Worst__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of unscheduled revenue within the relevant time period for the Opportunity revenue source, using the worst case scenario.</description>
        <inlineHelpText>In the corporate currency, the amount of unscheduled revenue within the relevant time period for the Opportunity revenue source, using the worst case scenario.</inlineHelpText>
        <label>Corp: Opportunity: Unscheduled Worst</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Opportunity_U__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of unscheduled revenue within the relevant time period for the Opportunity revenue source, using the expected scenario.</description>
        <inlineHelpText>In the corporate currency, the amount of unscheduled revenue within the relevant time period for the Opportunity revenue source.</inlineHelpText>
        <label>Corp: Opportunity: Unscheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Percent_Complete_Milestone_P__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that is ready for recognition within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that is ready for recognition within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</inlineHelpText>
        <label>Corp: % Complete: Milestone: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Percent_Complete_Milestone_R__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</inlineHelpText>
        <label>Corp: % Complete: Milestone: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Percent_Complete_Milestone_S__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that is scheduled for recognition within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that is scheduled for recognition within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</inlineHelpText>
        <label>Corp: % Complete: Milestone: Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Percent_Complete_Milestone_U__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of unscheduled revenue within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of unscheduled revenue within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</inlineHelpText>
        <label>Corp: % Complete: Milestone: Unscheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Percent_Complete_Project_P__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that is ready for recognition within the relevant time period for the Project revenue source, when using the % Complete recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that is ready for recognition within the relevant time period for the Project revenue source, when using the % Complete recognition method.</inlineHelpText>
        <label>Corp: % Complete: Project: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Percent_Complete_Project_R__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Project revenue source, when using the % Complete recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Project revenue source, when using the % Complete recognition method.</inlineHelpText>
        <label>Corp: % Complete: Project: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Percent_Complete_Project_S__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that is scheduled for recognition within the relevant time period for the Project revenue source, when using the % Complete recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that is scheduled for recognition within the relevant time period for the Project revenue source, when using the % Complete recognition method.</inlineHelpText>
        <label>Corp: % Complete: Project: Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Percent_Complete_Project_U__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of unscheduled revenue within the relevant time period for the Project revenue source, when using the % Complete recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of unscheduled revenue within the relevant time period for the Project revenue source, when using the % Complete recognition method.</inlineHelpText>
        <label>Corp: % Complete: Project: Unscheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Timecard_P__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that is ready for recognition for the Timecard revenue source, when using the Deliverable recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that is ready for recognition for the Timecard revenue source, when using the Deliverable recognition method.</inlineHelpText>
        <label>Corp: Deliverable: Timecard: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Corp_Timecard_R__c</fullName>
        <defaultValue>null</defaultValue>
        <description>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Timecard revenue source, when using the Deliverable recognition method.</description>
        <inlineHelpText>In the corporate currency, the amount of revenue that has already been recognized within the relevant time period for the Timecard revenue source, when using the Deliverable recognition method.</inlineHelpText>
        <label>Corp: Deliverable: Timecard: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Equal_Split_Milestone_Pending__c</fullName>
        <description>Amount of revenue that is ready for recognition within the relevant time period for the Milestone revenue source, when using the Equal Split recognition method. Populated by the revenue forecast version batch Apex job.</description>
        <inlineHelpText>Amount of revenue that is ready for recognition within the relevant time period for the Milestone revenue source, when using the Equal Split recognition method. Populated by the revenue forecast version batch Apex job.</inlineHelpText>
        <label>Equal Split: Milestone: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Equal_Split_Milestone_Recognized__c</fullName>
        <description>Amount of revenue that has already been recognized within the relevant time period for the Milestone revenue source, when using the Equal Split recognition method. Populated using data from Revenue Management, if you are using the integration.</description>
        <inlineHelpText>Amount of revenue that has already been recognized within the relevant time period for the Milestone revenue source, when using the Equal Split recognition method. Populated using data from Revenue Management, if you are using the integration.</inlineHelpText>
        <label>Equal Split: Milestone: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Equal_Split_Milestone_Scheduled__c</fullName>
        <description>Amount of revenue that is scheduled for recognition within the relevant time period for the Milestone revenue source, when using the Equal Split recognition method.</description>
        <inlineHelpText>Amount of revenue that is scheduled for recognition within the relevant time period for the Milestone revenue source, when using the Equal Split recognition method.</inlineHelpText>
        <label>Equal Split: Milestone: Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Equal_Split_Project_Pending__c</fullName>
        <description>Amount of revenue that is ready for recognition within the relevant time period for the Project revenue source, when using the Equal Split recognition method. Populated by the revenue forecast version batch Apex job.</description>
        <inlineHelpText>Amount of revenue that is ready for recognition within the relevant time period for the Project revenue source, when using the Equal Split recognition method. Populated by the revenue forecast version batch Apex job.</inlineHelpText>
        <label>Equal Split: Project: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Equal_Split_Project_Recognized__c</fullName>
        <description>Amount of revenue that has already been recognized within the relevant time period for the Project revenue source, when using the Equal Split recognition method. Populated using data from Revenue Management, if you are using the integration.</description>
        <inlineHelpText>Amount of revenue that has already been recognized within the relevant time period for the Project revenue source, when using the Equal Split recognition method. Populated using data from Revenue Management, if you are using the integration.</inlineHelpText>
        <label>Equal Split: Project: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Equal_Split_Project_Scheduled__c</fullName>
        <description>Amount of revenue that is scheduled for recognition within the relevant time period for the Project revenue source, when using the Equal Split recognition method.</description>
        <inlineHelpText>Amount of revenue that is scheduled for recognition within the relevant time period for the Project revenue source, when using the Equal Split recognition method.</inlineHelpText>
        <label>Equal Split: Project: Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Eva_Scheduled__c</fullName>
        <description>Amount of revenue that is scheduled for recognition within the relevant time period for the EVA revenue source, when using the Deliverable recognition method.</description>
        <inlineHelpText>Amount of revenue that is scheduled for recognition within the relevant time period for the EVA revenue source, when using the Deliverable recognition method.</inlineHelpText>
        <label>Deliverable: EVA: Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Pending__c</fullName>
        <description>Amount of revenue that is ready for recognition within the relevant time period for the Expense revenue source, when using the Deliverable recognition method. Populated by the revenue forecast version batch Apex job.</description>
        <inlineHelpText>Amount of revenue that is ready for recognition within the relevant time period for the Expense revenue source, when using the Deliverable recognition method. Populated by the revenue forecast version batch Apex job.</inlineHelpText>
        <label>Deliverable: Expense: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Recognized__c</fullName>
        <description>Amount of revenue that has already been recognized within the relevant time period for the Expense revenue source, when using the Deliverable recognition method. Populated using data from Revenue Management, if you are using the integration.</description>
        <inlineHelpText>Amount of revenue that has already been recognized within the relevant time period for the Expense revenue source, when using the Deliverable recognition method. Populated using data from Revenue Management, if you are using the integration.</inlineHelpText>
        <label>Deliverable: Expense: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the group this revenue forecast version detail relates to.</description>
        <inlineHelpText>Lookup to the group this revenue forecast version detail relates to.</inlineHelpText>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Revenue Forecast Version Details</relationshipLabel>
        <relationshipName>Revenue_Forecast_Version_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Milestone_Pending__c</fullName>
        <description>Amount of revenue that is ready for recognition within the relevant time period for the Milestone revenue source, when using the Deliverable recognition method. Populated by the revenue forecast version batch Apex job.</description>
        <inlineHelpText>Amount of revenue that is ready for recognition within the relevant time period for the Milestone revenue source, when using the Deliverable recognition method. Populated by the revenue forecast version batch Apex job.</inlineHelpText>
        <label>Deliverable: Milestone: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Milestone_Recognized__c</fullName>
        <description>Amount of revenue that has already been recognized within the relevant time period for the Milestone revenue source, when using the Deliverable recognition method. Populated using data from Revenue Management, if you are using the integration.</description>
        <inlineHelpText>Amount of revenue that has already been recognized within the relevant time period for the Milestone revenue source, when using the Deliverable recognition method. Populated using data from Revenue Management, if you are using the integration.</inlineHelpText>
        <label>Deliverable: Milestone: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Milestone_Scheduled__c</fullName>
        <description>Amount of revenue that is scheduled for recognition within the relevant time period for the Milestone revenue source, when using the Deliverable recognition method.</description>
        <inlineHelpText>Amount of revenue that is scheduled for recognition within the relevant time period for the Milestone revenue source, when using the Deliverable recognition method.</inlineHelpText>
        <label>Deliverable: Milestone: Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the milestone this revenue forecast version detail relates to.</description>
        <inlineHelpText>Lookup to the milestone this revenue forecast version relates to.</inlineHelpText>
        <label>Milestone</label>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Revenue Forecast Version Details</relationshipLabel>
        <relationshipName>Revenue_Forecast_Version_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Misc_Adjustment_Pending__c</fullName>
        <description>Amount of revenue that is ready for recognition within the relevant time period for the Miscellaneous Adjustment revenue source, when using the Deliverable recognition method. Populated by the revenue forecast version batch Apex job.</description>
        <inlineHelpText>Amount of revenue that is ready for recognition within the relevant time period for the Miscellaneous Adjustment revenue source, when using the Deliverable recognition method. Populated by the revenue forecast version batch Apex job.</inlineHelpText>
        <label>Deliverable: Misc Adjustment: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Misc_Adjustment_Recognized__c</fullName>
        <description>Amount of revenue already recognized within the relevant time period for the Miscellaneous Adjustment revenue source, when using the Deliverable recognition method. Populated using data from Revenue Management, if you are using the integration.</description>
        <inlineHelpText>Amount of revenue already recognized within the relevant time period for the Miscellaneous Adjustment revenue source, when using the Deliverable recognition method. Populated using data from Revenue Management, if you are using the integration.</inlineHelpText>
        <label>Deliverable: Misc Adjustment: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Probability__c</fullName>
        <description>The probability of the opportunity that this revenue forecast version detail relates to.</description>
        <inlineHelpText>The probability of the opportunity that this revenue forecast version detail relates to.</inlineHelpText>
        <label>Opportunity Probability (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Unscheduled_Best__c</fullName>
        <description>Amount of unscheduled revenue within the relevant time period for the Opportunity revenue source, using the best case scenario.</description>
        <inlineHelpText>Amount of unscheduled revenue within the relevant time period for the Opportunity revenue source, using the best case scenario.</inlineHelpText>
        <label>Opportunity: Unscheduled Best</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Unscheduled_Worst__c</fullName>
        <description>Amount of unscheduled revenue within the relevant time period for the Opportunity revenue source, using the worst case scenario.</description>
        <inlineHelpText>Amount of unscheduled revenue within the relevant time period for the Opportunity revenue source, using the worst case scenario.</inlineHelpText>
        <label>Opportunity: Unscheduled Worst</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Unscheduled__c</fullName>
        <description>Amount of unscheduled revenue within the relevant time period for the Opportunity revenue source, using the expected scenario.</description>
        <inlineHelpText>Amount of unscheduled revenue within the relevant time period for the Opportunity revenue source.</inlineHelpText>
        <label>Opportunity: Unscheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the opportunity this revenue forecast version detail relates to.</description>
        <inlineHelpText>Lookup to the opportunity this revenue forecast version relates to.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Revenue Forecast Version Details</relationshipLabel>
        <relationshipName>Revenue_Forecast_Version_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Complete_Milestone_Pending__c</fullName>
        <description>Amount of revenue that is ready for recognition within the relevant time period for the Milestone revenue source, when using the % Complete recognition method. Populated by the revenue forecast version batch Apex job.</description>
        <inlineHelpText>Amount of revenue that is ready for recognition within the relevant time period for the Milestone revenue source, when using the % Complete recognition method. Populated by the revenue forecast version batch Apex job.</inlineHelpText>
        <label>% Complete: Milestone: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>